Switched to something more notably halo
Wallpaper from
http://noble--6.deviantart.com/art/The-Installation-410189532, amazing
work.

Added outlines to keep white text legible.

--- a/css/browser.css
+++ b/css/browser.css
@@ -17,6 +17,8 @@ img{
     position: absolute;
     top: -5px;
     left: 80;
+	text-shadow: 1px 0 0 #1a3d5a, -1px 0 0 #1a3d5a, 0 1px 0 #1a3d5a, 0 -1px 0 #1a3d5a, 1px 1px #1a3d5a, -1px -1px 0 #1a3d5a, 1px -1px 0 #1a3d5a, -1px 1px 0 #1a3d5a;
+
 }
 #logo{
     position: absolute;
@@ -50,6 +52,7 @@ img{
     position: absolute;
     top: 10;
     left: 515;
+	text-shadow: 1px 0 0 #1a3d5a, -1px 0 0 #1a3d5a, 0 1px 0 #1a3d5a, 0 -1px 0 #1a3d5a, 1px 1px #1a3d5a, -1px -1px 0 #1a3d5a, 1px -1px 0 #1a3d5a, -1px 1px 0 #1a3d5a;
 }
 .closeButton {
     opacity: 0.8;
