--- a/css/browser.css
+++ b/css/browser.css
@@ -20,14 +20,14 @@ img{
     opacity: 0.8;
     position: absolute;
     top: -5px;
-    left: 0;
+    left: 10px;
 
 }
 .refresh {
     opacity: 0.8;
     position: absolute;
     top: 13px;
-    left: 200px;
+    left: 210px;
     color: white;
     font-weight: bold;
     background-color: black;
@@ -76,6 +76,11 @@ img{
 .selected .controllerButton{
     opacity: 1;
 }
+
+.selected{
+    background-color: #31415b;
+}
+
 .refresh .controllerButton{
     opacity: 1;
 }
@@ -86,12 +91,18 @@ img{
     opacity: 0.8;
     top: 55;
     padding-top: 0;
-    border: 1px solid white;
+    height: 80%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 #serverTable tbody tr td{
     background-color: #13233d;
     color: white;
     border: 1px solid #05152f;
+}
+
+#serverTable tbody tr{
+    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 65%, 99% 100%, 0% 100%);
 }
 #serverTable tbody tr.selected td{
     background-color: white;
@@ -121,10 +132,10 @@ img{
 }
 
 #serverTable_filter{
-    opacity: 0.8;
     position: relative;
-    top: -40px;
+    top: -45px;
     right: 0;
+    z-index: 1;
 }
 #serverTable_filter label{
     color: white;
@@ -163,94 +174,107 @@ td.details-control {
 tr.shown td.details-control {
     background: url('../images/details_close.png') no-repeat center center;
 }
+
+#gamecardborder{
+        position: absolute;
+    bottom: 10px;
+    right: 10px;
+    	height: 126px;
+	width: 532px;
+    background-color: #404f70;
+    -webkit-clip-path: polygon(4% 0, 100% 0, 100% 82%, 96% 100%, 0 100%, 0 20%);
+}
+
 #gamecard{
-    margin-left: 4%;
-	padding: 10;
-	padding-right: 0;
+    opacity: 0.8;
+    background-color:#13233d;
+    left: 1px;
+    top: 1px;
+    padding: 1px;
     float: left;
-	color: black;
-	height: 200px;
-	width: 300px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    border: 1px solid white;
+	color: white;
+	height: 124px;
+	width: 530px;
+    position: relative;
     margin-bottom: 10px;
+    padding-left: 10px;
+    -webkit-clip-path: polygon(4% 0, 100% 0, 100% 82%, 96% 100%, 0 100%, 0 20%);
 }
-#gamecard h2, #gamecard h3, #gamecard h4, #gamecard h5{
-	padding: 1;
-	margin: 0;
-}
-#mapPic{
-	float: none;
-	clear: right;
-	padding-bottom: 10;
-	padding-right: 12;
-}
-#gameTypePic{
-	height: 70;
-	width: 70;
-	float: left;
-	margin-right: 10;
-	padding: 2;
-}
-#gameStatus{
-	position: relative;
-	float: right;
-	bottom: 20;
-	right: 15;
-}
-#sprintVars{
-    color: black;
-	position: absolute;
-	float: right;
-    height: 45px;
-    width: 45px;
-	top: 5;
-	right: 10;
-}
-#voipIcon{
-	position: absolute;
-	float: right;
-    height: 34px;
-    width: 34px;
-	top: 10;
-	right: 48;
-}
-#gameName{
-    line-height: 15px;
-    height: 45px;
-    overflow: hidden;
-}
-#hostName{
-	font-weight: bold;
-}
-#scoreboard{
+
+#mappic{
+    right: 0px;
+    margin-top: -30px;
+    height: 122px;
+    position: relative;
     float: right;
-    height: 264px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    width: 55%;
-	margin-right: 4%;
+    border-left: 1px solid #404f70;
+    padding-left: 1px;
 }
-.statLines{
-    font-size: 8pt;
-	background-color: black !important;
+
+#varpic{
+    height: 75px;
+    right: 180px;
+    top: 25px;
+    position: absolute;
+    float: right;
 }
-.tableHeader{
-    font-size: 8pt;
-    padding: 0; 
+
+#host{
+    position: absolute;
+    top: 35px;
+    float: left;
 }
-.statBreakdown{
+
+#name{
+    position: absolute;
+    top: 55px;
+}
+
+#title{
+    background-color: black;
+    margin-left: -10px;
+    width: 256px;
+    height: 30px;
+    border-bottom: 1px solid #404f70;
+    color: white;
+    text-align: center;
+    line-height: 30px;
+}
+
+#gametype{
+    float: left;
+}
+
+#map{
+    float: right;
+}
+
+#voip{
+    position: absolute;
+    top: 75px;
+}
+
+#sprint{
+    position: absolute;
+    top: 95px;
+}
+
+#extBorder{
+    position: absolute;
+    top: 0px;
+    background-color: #404f70;
+    height: 100%;
     width: 100%;
+    padding: 1px;
+    -webkit-clip-path: polygon(575px 0%, 625px 45px, 100% 45px, 100% 100%, 40px 100%, 0 93%, 0 0);
+    z-index: -1;
 }
-.private{
-	background-color: black !important;
-    color: #843534;
-	border: 3px solid #843534;
-}
-.private h3{
-	font-weight: bold;
-	margin: 0;
-	padding-top: 60;
+
+#extBorder2{
+    background-color: #05152f;
+    top: 1px;
+    left: 1px;
+    height: 100%;
+    padding: 5px;
+    -webkit-clip-path: polygon(573px 0%, 623px 45px, 100% 45px, 100% 100%, 40px 100%, 0 93%, 0 0);
 }
