--- a/css/browser.css
+++ b/css/browser.css
@@ -8,20 +8,14 @@ body {
 img{
     -webkit-user-drag: none;
 }
-#bg {
-    position: fixed;
-    /* Preserve aspect ratio */
-    min-width: 100%;
-    min-height: 100%;
-	z-index: -1;
-}
+
 .browserTitle{
     color: white;
     opacity: 0.8;
     position: absolute;
     top: -10px;
     left: 8px;
-
+    z-index: 1;
 }
 .refresh {
     opacity: 0.8;
@@ -47,6 +41,7 @@ img{
     position: absolute;
     top: 3px;
     left: 350px;
+        z-index: 1;
 }
 .closeButton {
     opacity: 0.8;
@@ -90,11 +85,11 @@ img{
 #serverTable_wrapper{
     opacity: 0.8;
     top: 55;
-    padding-top: 0;
-    height: 80%;
+    height: -webkit-calc(100% - 50px);
     padding-left: 10px;
     padding-right: 10px;
-    margin-bottom: 10px;
+    z-index: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 45px 100%, 0 -webkit-calc(100% - 50px), 0 0);
 }
 #serverTable tbody tr td{
     background-color: #13233d;
@@ -136,7 +131,7 @@ img{
     position: relative;
     top: -45px;
     right: -4px;
-    z-index: 1;
+    z-index: 3;
 }
 #serverTable_filter label{
     color: white;
@@ -184,6 +179,7 @@ tr.shown td.details-control {
 	width: 532px;
     background-color: #404f70;
     -webkit-clip-path: polygon(4% 0, 100% 0, 100% 82%, 96% 100%, 0 100%, 0 20%);
+    z-index: 1;
 }
 
 #gamecard{
@@ -220,14 +216,6 @@ tr.shown td.details-control {
     float: right;
 }
 
-#host{
-
-}
-
-#name{
-
-}
-
 #title{
     background-color: black;
     margin-left: -10px;
@@ -239,20 +227,8 @@ tr.shown td.details-control {
     line-height: 30px;
 }
 
-#gametype{
-    float: left;
-}
-
 #map{
     float: right;
-}
-
-#voip{
-
-}
-
-#sprint{
-
 }
 
 #extBorder{
@@ -262,8 +238,8 @@ tr.shown td.details-control {
     height: 100%;
     width: 100%;
     padding: 1px;
-    -webkit-clip-path: polygon(535px 0%, 585px 45px, 100% 45px, 100% 100%, 40px 100%, 0 93%, 0 0);
-    z-index: -1;
+    -webkit-clip-path: polygon(535px 0%, 585px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
+    z-index: 0;
 }
 
 #extBorder2{
@@ -272,5 +248,5 @@ tr.shown td.details-control {
     left: 1px;
     height: 100%;
     padding: 5px;
-    -webkit-clip-path: polygon(533px 0%, 583px 45px, 100% 45px, 100% 100%, 40px 100%, 0 93%, 0 0);
+    -webkit-clip-path: polygon(533px 0%, 583px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
 }
