--- a/css/browser.css
+++ b/css/browser.css
@@ -220,6 +220,7 @@ tr.shown td.details-control {
     top: 2px;
     left: 2px;
     width: 246px;
+    height: 139px;
     background-color: #13233d;
     -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
 }
@@ -245,6 +246,7 @@ tr.shown td.details-control {
 
 #mappic{
     width: 246px;
+    height: 109px;
 }
 
 #varpic{
