--- a/css/browser.css
+++ b/css/browser.css
@@ -4,6 +4,7 @@ body {
     width: -webkit-calc(100% - 30px);
     margin-left: auto;
     margin-right: auto;
+    cursor: url(images/cursor.png), auto;
 }
 img{
     -webkit-user-drag: none;
