--- a/css/browser.css
+++ b/css/browser.css
@@ -152,7 +152,10 @@ img{
 }
 
 #serverTable_paginate{
-    display: none
+    position: absolute;
+    bottom: 10px;
+    right: 0px;
+    background-color: white;
 }
 
 #serverTable_paginate label{
