--- a/css/browser.css
+++ b/css/browser.css
@@ -155,7 +155,7 @@ img{
 #serverTable_length{
     position: absolute;
     float: left;
-    bottom: 15px;
+    bottom: 13px;
     left: 40px;
     color: black;
 }
@@ -171,12 +171,12 @@ img{
 
 #serverTable_paginate{
     position: absolute;
-    bottom: 10px;
-    right: 8px;
-    padding-bottom: 4px;
-    padding-right: 2px;
+    bottom: 9px;
+    right: 16px;
     border: 1px solid #404f70;
     background-color: #13233d;    
+    height: 38px;
+    padding: 0;
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.current{
@@ -205,7 +205,16 @@ img{
 }
 
 #serverTable_info{
-    display: none;
+    text-align: center;
+    position: absolute;
+    bottom: 5px;
+    left: 0px;
+    color: white;
+    border-top: 1px solid #404f70;
+    border-right: 1px solid #404f70;
+    height: 46px;
+    width: -webkit-calc(100% - 10px);
+    margin-bottom: 0;
 }
 
 #serverTable{
