--- a/css/browser.css
+++ b/css/browser.css
@@ -231,7 +231,7 @@ tr.shown td.details-control {
     top: 2px;
     left: 2px;
     width: 246px;
-    height: 139px;
+    min-height: 139px;
     background-color: #13233d;
     -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
 }
@@ -239,16 +239,21 @@ tr.shown td.details-control {
 #cardheaderborder{
     background-color: #404f70;
     width: 250px;
-    height: 143px;
+    min-height: 143px;
     -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
-}
+    padding-bottom: 4px;
+    }
 
 #title{
     position: relative;
     margin-top: 2px;
-    height: 30px;
-    line-height: 30px;
+    min-height: 30px;
     text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    line-height: 20px;
     width: 246px;
     background-color: black;
     color: white;
