--- a/css/browser.css
+++ b/css/browser.css
@@ -325,3 +325,17 @@ tr.shown td.details-control {
     color: white; 
     -webkit-clip-path: polygon(0 0, 100% 0, 100% -webkit-calc(100% - 30px), -webkit-calc(100% - 30px) 100%, 0 100%, 0 0);
 }
+
+.browserSwitch{
+    opacity: 0.8;
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    padding: 6px;
+    position: absolute;
+    bottom: 8px;
+    left: -webkit-calc(50% - 150px);
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 10;
+}
