--- a/css/browser.css
+++ b/css/browser.css
@@ -95,7 +95,7 @@ img{
     opacity: 0.8;
     float: left;
     top: 55;
-    height: -webkit-calc(100% - 55px);
+    min-height: -webkit-calc(100% - 55px);
     width: -webkit-calc(100% - 260px);
     padding-left: 10px;
     padding-right: 10px;
@@ -274,7 +274,7 @@ tr.shown td.details-control {
     position: absolute;
     top: 0px;
     background-color: #404f70;
-    height: 100%;
+    height:100vh;
     width: 100%;
     padding: 1px;
     -webkit-clip-path: polygon(575px 0%, 625px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
@@ -285,7 +285,7 @@ tr.shown td.details-control {
     background-color: #05152f;
     top: 1px;
     left: 1px;
-    height: 100%;
+    height:100vh;
     padding: 5px;
     -webkit-clip-path: polygon(573px 0%, 623px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
 }
@@ -403,10 +403,10 @@ tr.shown td.details-control {
     background-color: black;
     color: white;
     border: 1px solid white;
-    padding: 6px;
+    padding: 4px;
     position: absolute;
-    bottom: 6px;
-    left: 250px;
+    top: -webkit-calc(100% - 38px);
+    left: 190px;
     margin-left: auto;
     margin-right: auto;
     z-index: 10;
