--- a/css/browser.css
+++ b/css/browser.css
@@ -293,7 +293,9 @@ tr.shown td.details-control {
 
 #gamecard{
     width: 250px;
-    position: relative;
+    position: fixed;
+    top: 2px;
+    right: 16px;
     float: right;
     z-index: 2;
     margin-top: 54px;
