--- a/css/browser.css
+++ b/css/browser.css
@@ -4,6 +4,7 @@ body {
     width: -webkit-calc(100% - 30px);
     margin-left: auto;
     margin-right: auto;
+    overflow-y: hidden;
 }
 img{
     -webkit-user-drag: none;
@@ -85,12 +86,6 @@ img{
     top: -30px;
 }
 
-#serverTable thead tr th{
-    line-height: 20px !important;
-    padding-bottom: 5px !important;
-    padding-top: 5px !important;
-}
-
 #serverTable_wrapper{
     opacity: 0.8;
     float: left;
@@ -114,28 +109,31 @@ img{
     -webkit-clip-path: polygon(0% 0%, 100% 0, 100% -webkit-calc(100% - 12px), -webkit-calc(100% - 12px) 100%, 0% 100%);
 }
 
-#serverTable tbody tr.selected td{
+.selected td{
     background-color: #31415b;
     color: white;
 }
 
-#serverTable thead tr th.sorting_asc, thead tr th.sorting_desc {
+.sorting_asc, .sorting_desc {
     background-color: white;
     color: #13233d;
 }
 
-#serverTable thead tr th.sorting:hover{
+.sorting:hover{
     color: white;
 }
 
-#serverTable thead tr th.sorting{
+.sorting{
     padding-top: 0;
     color: white;
-    border-bottom: 1px solid white;
 }
 
-#serverTable tbody tr td.sorting_1{
+.sorting_1{
     color: white;
+}
+
+table.dataTable thead th, table.dataTable thead td {
+    border-bottom: 1px solid white !important;
 }
 
 #serverTable tbody tr:hover td{
@@ -153,6 +151,7 @@ img{
 
 #serverTable_filter label{
     color: white;
+    margin-bottom: -50px;
 }
 
 #serverTable_filter input{
@@ -177,13 +176,22 @@ img{
     color: black;
 }
 
-#serverTable_paginate{
-    position: absolute;
-    bottom: 4px;
-    right: 16px;
-    background-color: #13233d;    
-    height: 38px;
-    padding: 0;
+.display{
+    padding-top: 30px;
+}
+
+.dataTables_scroll{
+    position: relative;
+    top: -34px;
+}
+
+.dataTables_scrollBody{
+    margin-bottom: -38px;
+
+}
+
+#serverTable thead tr{
+    border-bottom: 1px solid white;
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button{
@@ -229,6 +237,15 @@ img{
     color: #404f70 !important;
 }
 
+#serverTable_paginate{
+    position: absolute;
+    bottom: 4px;
+    right: 16px;
+    background-color: #13233d;    
+    height: 38px;
+    padding: 0;
+}
+
 #serverTable_paginate label{
     color: white !important;
 }
@@ -247,10 +264,6 @@ img{
     background-color: #05152f;
 }
 
-#serverTable{
-	border-bottom: 0;
-}
-
 #connectionStatus{
 	opacity: 0.8;
 	position:fixed; bottom:0; right: 0;
@@ -258,16 +271,6 @@ img{
 	padding-right: 8;
 	padding-bottom: 7;
     color: white;
-}
-
-td.details-control {
-    background: url('../images/details_open.png') no-repeat center center;
-    cursor: pointer;
-	background-color: black !important;
-}
-
-tr.shown td.details-control {
-    background: url('../images/details_close.png') no-repeat center center;
 }
 
 #extBorder{
